--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -148,10 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "dfc4a62d-4b7d-497a-8e90-d6f05c1100ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/jk/wr84hv2x1yx8s3zxkfh5zxtr0000gn/T/ipykernel_53846/1697385181.py:54: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "  plt.legend(loc='upper left')\n"
+     ]
+    }
+   ],
    "source": [
     "time = time_start\n",
     "times = []\n",
@@ -206,7 +215,7 @@
     "        )\n",
     "        plt.gca().add_patch(patch)\n",
     "        \n",
-    "    plt.legend([], loc='upper left')\n",
+    "    plt.legend(loc='upper left')\n",
     "    \n",
     "    plt.xlabel(\"\"\"kilometers\n",
     "Satellite analysis can be inaccurate. Refer to fire.ca.gov for official information.\n",
